--- a/admin/src/theme/default/admin/shared/components/navigation/navigation.component.html
+++ b/admin/src/theme/default/admin/shared/components/navigation/navigation.component.html
@@ -33,6 +33,12 @@
     </span>
         </a>
     </li>
+    <li class="nav-item mega-dropdown customers-nav">
+        <a [routerLink]="['/demo']" [routerLinkActive]="'active'" class="nav-link waves-effect waves-dark" href="javascript:void(0)">
+            <span class="d-md-block"> <img src="assets/img/customers-ico.png">Demo
+    </span>
+        </a>
+    </li>
     <li class="nav-item mega-dropdown cms-nav">
         <a [routerLink]="['/cms']" [routerLinkActive]="'active'" class="nav-link waves-effect waves-dark" href="javascript:void(0)">
             <span class="d-md-block"> <img src="assets/img/cms-ico.png">CMS</span>
