home page design working

--- a/store/src/default/pages/home/home.component.html
+++ b/store/src/default/pages/home/home.component.html
@@ -1,14 +1,44 @@
 <app-main-carousel></app-main-carousel>
+
 <div class="products-tabs featured-tabs">
-
     <mat-tab-group mat-stretch-tabs>
+        <mat-tab label="Most Popular and Trending">
+            <app-trending-product></app-trending-product>
+        </mat-tab>
+    </mat-tab-group>
+</div>
 
+<div class="products-tabs featured-tabs">
+    <mat-tab-group mat-stretch-tabs>
+        <mat-tab label="Mens Popular and Trending">
+            <app-trending-product></app-trending-product>
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
+<div class="products-tabs featured-tabs">
+    <mat-tab-group mat-stretch-tabs>
+        <mat-tab label="Womens Popular and Trending">
+            <app-trending-product></app-trending-product>
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
+<div class="products-tabs featured-tabs">
+    <mat-tab-group mat-stretch-tabs>
+        <mat-tab label="Baby and Kids Popular and Trending">
+            <app-trending-product></app-trending-product>
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
+
+<!-- <div class="products-tabs featured-tabs">
+    <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Today Deals">
             <app-products-carousel [products]="listSandbox.todayDealList$ | async"></app-products-carousel>
         </mat-tab>
     </mat-tab-group>
+</div> -->
 
-
-</div>
-
-<app-brands-carousel [brands]="listSandbox.manufacturer$ | async"></app-brands-carousel>
+<!-- <app-brands-carousel [brands]="listSandbox.manufacturer$ | async"></app-brands-carousel> -->
