--- a/store/src/default/shared/components/options/options.component.html
+++ b/store/src/default/shared/components/options/options.component.html
@@ -1,5 +1,6 @@
-<div class="options transition" [ngClass]="{'show': showOptions}">
-    <button mat-raised-button (click)="showOptions = !showOptions" class="options-icon mat-elevation-z0">
+<!-- [ngClass]="{'show': showOptions}" -->
+<div class="options transition" class="green">
+    <!-- <button mat-raised-button (click)="showOptions = !showOptions" class="options-icon mat-elevation-z0">
         <mat-icon>palette</mat-icon>
     </button>
     <mat-card fxLayout="column" fxLayoutAlign="space-between start"> 
@@ -9,5 +10,5 @@
         <span class="skin-icon pink" (click)="changeTheme('pink')"></span> 
         <span class="skin-icon purple" (click)="changeTheme('purple')"></span>
         <span class="skin-icon grey" (click)="changeTheme('grey')"></span>      
-    </mat-card>
+    </mat-card> -->
 </div>
