--- a/store/src/default/common/layout/layout.container.html
+++ b/store/src/default/common/layout/layout.container.html
@@ -4,12 +4,12 @@
         <app-spurt-side-bar></app-spurt-side-bar>
     </mat-sidenav>
 
-    <mat-toolbar class="head-toolbar">
+    <!-- <mat-toolbar class="head-toolbar">
         <app-spurt-header class="head"></app-spurt-header>
-    </mat-toolbar>
-    <mat-toolbar>
+    </mat-toolbar> -->
+    <!-- <mat-toolbar>
         <app-spurt-header-menu [categories]="listSandBox.categoryList$ | async" class="head"></app-spurt-header-menu>
-    </mat-toolbar>
+    </mat-toolbar> -->
     <app-menu fxShow="false" fxShow.gt-sm [categories]="listSandBox.categoryList$ | async"></app-menu>
 
     <div class="theme-container main">
@@ -17,8 +17,10 @@
         <router-outlet></router-outlet>
     </div>
     <app-options></app-options>
-
+<!-- footer -->
+    <app-menu fxShow="false" fxShow.gt-sm [categories]="listSandBox.categoryList$ | async"></app-menu>
     <app-footer></app-footer>
+    <!--  -->
 
     <div *ngIf="showBackToTop" fxLayout="row" fxLayoutAlign="center center" class="back-to-top transition"
          (click)="scrollToTop()">
