--- a/store/src/default/shared/components/main-carousel/main-carousel.component.html
+++ b/store/src/default/shared/components/main-carousel/main-carousel.component.html
@@ -19,7 +19,7 @@
             <button mat-mini-fab color="primary" class="swiper-button-next swipe-arrow"><mat-icon>keyboard_arrow_right</mat-icon></button>
         </div>
     </div>
-    <div class="main-slider-right">
+    <!-- <div class="main-slider-right">
         <div class="msr-col" style="background-image: url(assets/images/slider-right-img1.png)">
             <div class="msr-col-content">
                 <h3>Summer Collection</h3>
@@ -34,5 +34,5 @@
                 <button mat-raised-button color="primary" (click)="allProducts()">Shop now</button>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
