--- a/store/src/default/shared/components/menu/menu.component.html
+++ b/store/src/default/shared/components/menu/menu.component.html
@@ -1,36 +1,56 @@
 <mat-toolbar class="top-navbar mat-elevation-z2" fxLayoutAlign="" color="primary">
-    <a mat-button [routerLink]="['/']" routerLinkActive="horizontal-active-link" [routerLinkActiveOptions]="{exact:true}"> <img src="assets/images/home.png"> </a>
-    <a mat-button (click)="sendUniqueId('productFilter')" [routerLink]="['/products/', 'All']" class="colorMenu" routerLinkActive="colorMenu" [routerLinkActiveOptions]="{exact:true}">
+    <a class="logo" routerLink="/" (click)="closeSubMenus()"><img src="assets/images/storelogo.png"
+            style="width: 192px; height: 43px"></a>
+    <!-- <a mat-button [routerLink]="['/']" routerLinkActive="horizontal-active-link" [routerLinkActiveOptions]="{exact:true}"> <img src="assets/images/home.png"> </a> -->
+    <a mat-button (click)="sendUniqueId('productFilter')" [routerLink]="['/products/', 'All']" class="colorMenu"
+        routerLinkActive="colorMenu" [routerLinkActiveOptions]="{exact:true}">
         AllProducts
     </a>
-    <a mat-button class="colorMenu" routerLinkActive="horizontal-active-link" *ngFor="let category of categories;let i=index" [routerLinkActiveOptions]="{exact:true}" [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)">{{category.name}}
+    <a mat-button class="colorMenu" routerLinkActive="horizontal-active-link"
+        *ngFor="let category of categories;let i=index" [routerLinkActiveOptions]="{exact:true}"
+        [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)">{{category.name}}
         <mat-icon class="caret">arrow_drop_down</mat-icon>
     </a>
     <mat-menu #menu="matMenu" [overlapTrigger]="false" class="mega-menu category-menu app-dropdown">
         <span>
-        <div fxLayout="row wrap" *ngIf="((index)||(index === 0))">
-            <div fxFlex="20" fxLayout="column" class="p-1"
-                 *ngFor="let subCategory of categories[index].children">
-                <a mat-menu-item [routerLink]="['/products', subCategory.categoryId]"
-                   [routerLinkActiveOptions]="{exact:true}"
-                   (click)="linkActive()"
-                   routerLinkActive="horizontal-active-link">
-                    <b>{{subCategory.name}}</b>
-                </a>
-                <mat-divider></mat-divider>
-                <div *ngIf="subCategory.children">
-                    <div *ngFor="let grandsubCategory of subCategory.children;let j=index">
-                        <a mat-menu-item [routerLink]="['/products', grandsubCategory.categoryId]"
-                           [routerLinkActiveOptions]="{exact:true}"
-                           (click)="linkActive()"
-                           routerLinkActive="horizontal-active-link">
-                            {{grandsubCategory.name}}</a>
+            <div fxLayout="row wrap" *ngIf="((index)||(index === 0))">
+                <div fxFlex="20" fxLayout="column" class="p-1" *ngFor="let subCategory of categories[index].children">
+                    <a mat-menu-item [routerLink]="['/products', subCategory.categoryId]"
+                        [routerLinkActiveOptions]="{exact:true}" (click)="linkActive()"
+                        routerLinkActive="horizontal-active-link">
+                        <b>{{subCategory.name}}</b>
+                    </a>
+                    <mat-divider></mat-divider>
+                    <div *ngIf="subCategory.children">
+                        <div *ngFor="let grandsubCategory of subCategory.children;let j=index">
+                            <a mat-menu-item [routerLink]="['/products', grandsubCategory.categoryId]"
+                                [routerLinkActiveOptions]="{exact:true}" (click)="linkActive()"
+                                routerLinkActive="horizontal-active-link">
+                                {{grandsubCategory.name}}</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-       </span>
+        </span>
     </mat-menu>
-    <a mat-button routerLink="/contact" routerLinkActive="horizontal-active-link" [routerLinkActiveOptions]="{exact:true}">Contact</a>
+    <a mat-button routerLink="/contact" routerLinkActive="horizontal-active-link"
+        [routerLinkActiveOptions]="{exact:true}">Contact</a>
+
+    <div class="search-algin" fxFlex fxFlexOffset.gt-sm="1" fxShow="false" fxShow.gt-sm>
+        <form method="get" class="search-form" fxLayout="row">
+            <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
+            </mat-menu>
+            <input type="text" placeholder="What are you looking for ?" fxFlex
+                (keyup)="searchData($event.target.value)">
+            <button mat-mini-fab (click)="search()" type="button"
+                class="search-btn mat-elevation-z0 mat-mini-fab mat-accent">
+                Search
+            </button>
+        </form>
+    </div>
+
+    <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
+        <app-spurt-cart></app-spurt-cart>
+    </div>
 </mat-toolbar>
