home page design working

--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-primary footer">
     <div fxLayout="row wrap" fxLayoutAlign="space-between" class="py-3 border-bottom-mute theme-container">
-        
+
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" class="useful-links">
             <h3 class="col-title">USEFUL LINKS FOR CUSTOMER</h3>
             <div class="">Contact us</div>
@@ -10,16 +10,17 @@
             <div class="">Returns</div>
             <div class="">Pricavy policy</div>
 
-            <h3 class="col-title mt-3">USEFUL LINKS FOR CUSTOMER</h3>
-            <div class="">Contact us</div>
-            <div class="">FAQs</div>
-            <div class="">T&C</div>
-            <div class="">Shiping</div>
-            <div class="">Returns</div>
-            <div class="">Pricavy policy</div>
+            <h3 class="col-title mt-3">JOIN OUR COMMUNITY</h3>
+            <div class="">Blog</div>
+            <div class="">Instagram</div>
+            <div class="">Facebook</div>
+            <div class="">Tiktok</div>
+            <div class="">Twitter</div>
 
         </div>
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" ngClass.xs="mt-2">
+
+
             <h3 class="col-title">USEFUL LINKS FOR VENDOR</h3>
             <div class="">Contact us</div>
             <div class="">FAQs</div>
@@ -28,13 +29,10 @@
             <div class="">Returns</div>
             <div class="">Pricavy policy</div>
 
-            <h3 class="col-title mt-3">USEFUL LINKS FOR VENDOR</h3>
+            <h3 class="mt-3 col-title">CORPORATE</h3>
             <div class="">Contact us</div>
-            <div class="">FAQs</div>
-            <div class="">T&C</div>
-            <div class="">Shiping</div>
-            <div class="">Returns</div>
-            <div class="">Pricavy policy</div>
+            <div class="">Careers</div>
+
         </div>
 
 
