--- a/store/src/default/shared/components/header-menu/header-menu.component.html
+++ b/store/src/default/shared/components/header-menu/header-menu.component.html
@@ -11,8 +11,8 @@
         </form>
     </div>
 
-    <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
+    <!-- <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
         <app-spurt-cart></app-spurt-cart>
-    </div>
+    </div> -->
 
 </mat-toolbar-row>
