--- a/store/src/default/pages/home/home.component.html
+++ b/store/src/default/pages/home/home.component.html
@@ -10,7 +10,7 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Mens Popular and Trending">
+        <mat-tab label="Dynamic Text Area">
             <app-trending-product></app-trending-product>
         </mat-tab>
     </mat-tab-group>
@@ -18,7 +18,7 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Womens Popular and Trending">
+        <mat-tab label="Dynamic Text Area">
             <app-trending-product></app-trending-product>
         </mat-tab>
     </mat-tab-group>
@@ -26,7 +26,23 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Baby and Kids Popular and Trending">
+        <mat-tab label="Dynamic Text Area">
+            <app-trending-product></app-trending-product>
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
+<div class="products-tabs featured-tabs">
+    <mat-tab-group mat-stretch-tabs>
+        <mat-tab label="Dynamic Text Area">
+            <app-trending-product></app-trending-product>
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
+<div class="products-tabs featured-tabs">
+    <mat-tab-group mat-stretch-tabs>
+        <mat-tab label="Dynamic Text Area">
             <app-trending-product></app-trending-product>
         </mat-tab>
     </mat-tab-group>
