modified header design

--- a/store/src/default/common/layout/layout.container.html
+++ b/store/src/default/common/layout/layout.container.html
@@ -12,7 +12,7 @@
     </mat-toolbar> -->
     <app-menu fxShow="false" fxShow.gt-sm [categories]="listSandBox.categoryList$ | async"></app-menu>
 
-    <div class="theme-container main">
+    <div class="theme-container-full main">
         <app-breadcrumb></app-breadcrumb>
         <router-outlet></router-outlet>
     </div>
