--- a/store/src/default/shared/components/menu/menu.component.html
+++ b/store/src/default/shared/components/menu/menu.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar class="top-navbar mat-elevation-z2" fxLayoutAlign="" color="primary">
-    <a class="logo" routerLink="/" (click)="closeSubMenus()"><img src="assets/images/storelogo.png"
-            style="width: 192px; height: 43px"></a>
+    <a class="logo" routerLink="/" (click)="closeSubMenus()"><img src="assets/images/logo1.png"></a>
     <!-- <a mat-button [routerLink]="['/']" routerLinkActive="horizontal-active-link" [routerLinkActiveOptions]="{exact:true}"> <img src="assets/images/home.png"> </a> -->
     <a mat-button (click)="sendUniqueId('productFilter')" [routerLink]="['/products/', 'All']" class="colorMenu"
         routerLinkActive="colorMenu" [routerLinkActiveOptions]="{exact:true}">
