--- a/store/src/styles.scss
+++ b/store/src/styles.scss
@@ -54,10 +54,11 @@
         color: green !important;
     }
     .top-navbar.mat-toolbar a {
-        color: white !important;
+        color: #000000 !important;
         font-size: 12px;
-        padding: 6px 20px 6px 0;
+        padding: 5px 15px;
         min-width: 100px;
+
     }
     .featured-tabs {
         .mat-tab-header {
@@ -117,16 +118,16 @@
         .cart-lk {
             a {
                 border-radius: 5px;
-                border: solid 2px #027600;
+                border: solid 2px #FF5354;
                 padding: 5px 10px;
                 font-size: 12px;
                 font-weight: 500;
-                color: #027600;
+                color: #FF5354 !important;
                 text-decoration: none;
                 display: inline-block;
                 &:hover {
-                    background: #027600;
-                    color: white;
+                    background: #FF5354;
+                    color: white !important;
                 }
             }
             &.bc-lk {
@@ -337,7 +338,7 @@
     flex-wrap: wrap;
 }
 
-.top-navbar.mat-toolbar a {
+ a {
     color: white !important;
     font-size: 12px;
     padding: 6px 20px 6px 0;
@@ -353,3 +354,36 @@
 //     right: -28px !important;
 //     width: 20% !important;
 // }
+
+.app.green{
+    .mat-toolbar.mat-primary{
+        background: transparent;
+        height: auto;
+        align-items: center !important;
+        padding: 5px 10px;
+        border-bottom: 1px solid #ddd;
+        box-shadow: none;
+
+        a.logo{
+            display: flex;
+
+            img{
+                height: 100px;
+            }
+        }
+    }
+}
+
+.top-navbar.mat-toolbar a span {
+    color: #000;
+}
+
+.search-form .search-btn{
+    background: #FF5354 !important;
+}
+.app.green .top-navbar.mat-toolbar a.mat-button:hover {
+    background: #FF5354;
+}
+.app.green .top-navbar.mat-toolbar a.mat-button:hover span, .app.green .top-navbar.mat-toolbar a.mat-button:hover .mat-icon{
+    color: #ffffff;
+}
