--- a/store/src/default/pages/home/home.component.html
+++ b/store/src/default/pages/home/home.component.html
@@ -11,7 +11,7 @@
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Dynamic Text Area">
-            <app-trending-product></app-trending-product>
+            <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
 </div>
@@ -19,7 +19,7 @@
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Dynamic Text Area">
-            <app-trending-product></app-trending-product>
+            <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
 </div>
@@ -27,7 +27,7 @@
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Dynamic Text Area">
-            <app-trending-product></app-trending-product>
+            <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
 </div>
@@ -35,7 +35,7 @@
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Dynamic Text Area">
-            <app-trending-product></app-trending-product>
+            <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
 </div>
@@ -43,7 +43,7 @@
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Dynamic Text Area">
-            <app-trending-product></app-trending-product>
+            <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
 </div>
