--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -3,35 +3,35 @@
 
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" class="useful-links">
             <h3 class="col-title">USEFUL LINKS FOR CUSTOMER</h3>
-            <div class="">Contact us</div>
-            <div class="">FAQs</div>
-            <div class="">T&C</div>
-            <div class="">Shiping</div>
-            <div class="">Returns</div>
-            <div class="">Pricavy policy</div>
+            <div class=""><a mat-button>Contact us</a></div>
+            <div class=""><a mat-button>FAQs</a></div>
+            <div class=""><a mat-button>T&C</a></div>
+            <div class=""><a mat-button>Shiping</a></div>
+            <div class=""><a mat-button>Returns</a></div>
+            <div class=""><a mat-button>Pricavy policy</a></div>
 
             <h3 class="col-title mt-3">JOIN OUR COMMUNITY</h3>
-            <div class="">Blog</div>
-            <div class="">Instagram</div>
-            <div class="">Facebook</div>
-            <div class="">Tiktok</div>
-            <div class="">Twitter</div>
+            <div class=""><a mat-button>Blog</a></div>
+            <div class=""><a mat-button>Instagram</a></div>
+            <div class=""><a mat-button>Facebook</a></div>
+            <div class=""><a mat-button>Tiktok</a></div>
+            <div class=""><a mat-button>Twitter</a></div>
 
         </div>
         <div fxFlex="100" fxFlex.gt-sm="25" fxFlex.sm="25" ngClass.xs="mt-2">
 
 
             <h3 class="col-title">USEFUL LINKS FOR VENDOR</h3>
-            <div class="">Contact us</div>
-            <div class="">FAQs</div>
-            <div class="">T&C</div>
-            <div class="">Shiping</div>
-            <div class="">Returns</div>
-            <div class="">Pricavy policy</div>
+            <div class=""><a mat-button>Contact us</a></div>
+            <div class=""><a mat-button>FAQs</a></div>
+            <div class=""><a mat-button>T&C</a></div>
+            <div class=""><a mat-button>Shiping</a></div>
+            <div class=""><a mat-button>Returns</a></div>
+            <div class=""><a mat-button>Pricavy policy</a></div>
 
             <h3 class="mt-3 col-title">CORPORATE</h3>
-            <div class="">Contact us</div>
-            <div class="">Careers</div>
+            <div class=""><a mat-button>Contact us</a></div>
+            <div class=""><a mat-button>Careers</a></div>
 
         </div>
 
