addes image with menu

--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -39,8 +39,8 @@
 
 
 
-        <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" ngClass.sm="mt-2" ngClass.xs="mt-2"
-            *ngIf="(listSandbox.settingDetail$ | async) as contact">
+        <!-- *ngIf="(listSandbox.settingDetail$ | async) as contact" -->
+        <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" ngClass.sm="mt-2" ngClass.xs="mt-2">
             <h3 class="col-title">ABOUT US</h3>
             <p fxLayout="row">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
