added sub categories and main category dropdown edit mode and save into db

--- a/admin/src/theme/default/admin/layout/common/common.component.html
+++ b/admin/src/theme/default/admin/layout/common/common.component.html
@@ -14,7 +14,7 @@
                 <a class="navbar-brand" [routerLink]="['/dashboard']">
                     <!-- Logo icon -->
                     <b class="logo-icon">
-            <img src="assets/img/logo_v3.png" style="width: 170px;" alt="homepage" class="light-logo" />
+            <img src="assets/img/logo_v3_old.png" style="width: 170px;" alt="homepage" class="light-logo" />
           </b>
                 </a>
                 <!-- ============================================================== -->
