--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" class="copyright theme-container">
-        <p ngClass.xs="mt-1" class="copyright">Copyright © 2022,Piccosoft Software labs India Private Limited</p>
+        <p ngClass.xs="mt-1" class="copyright">Copyright © 2022, Beaver ecommerce</p>
     </div>
 </footer>
 
