--- a/admin/src/theme/default/admin/shared/components/navigation/navigation.component.html
+++ b/admin/src/theme/default/admin/shared/components/navigation/navigation.component.html
@@ -35,7 +35,7 @@
     </li>
     <li class="nav-item mega-dropdown customers-nav">
         <a [routerLink]="['/demo']" [routerLinkActive]="'active'" class="nav-link waves-effect waves-dark" href="javascript:void(0)">
-            <span class="d-md-block"> <img src="assets/img/customers-ico.png">Demo
+            <span class="d-md-block"> <img src="assets/img/customers-ico.png">ADV
     </span>
         </a>
     </li>
