--- a/admin/src/theme/default/admin/demo/components/banner/list/list.component.html
+++ b/admin/src/theme/default/admin/demo/components/banner/list/list.component.html
@@ -4,7 +4,7 @@
         <div class="breadcrumbs-row">
             <div class="bc-col">
                 <ul>
-                    <li><a href="javascript:void(0)"> DEMO </a></li>
+                    <li><a href="javascript:void(0)"> ADV </a></li>
                     <li>Banners</li>
                 </ul>
             </div>
