working on subcategory banner

--- a/store/src/default/common/layout/layout.container.html
+++ b/store/src/default/common/layout/layout.container.html
@@ -13,7 +13,7 @@
     <app-menu fxShow="false" fxShow.gt-sm [categories]="listSandBox.categoryList$ | async"></app-menu>
 
     <div class="theme-container-full main">
-        <app-breadcrumb></app-breadcrumb>
+        <!-- <app-breadcrumb></app-breadcrumb> -->
         <router-outlet></router-outlet>
     </div>
     <app-options></app-options>
