--- a/store/src/default/pages/home/advertisment-product/advertisment-product.component.html
+++ b/store/src/default/pages/home/advertisment-product/advertisment-product.component.html
@@ -1,3 +1,4 @@
+{{viewCol}}
 <mat-sidenav-container>
   <mat-sidenav-content class="all-products" ngClass.gt-sm="p-left">
     <!-- <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center"
