home page redesign

--- a/store/src/default/pages/home/advertisment-product/advertisment-product.component.html
+++ b/store/src/default/pages/home/advertisment-product/advertisment-product.component.html
@@ -37,7 +37,7 @@
       <div *ngFor="let product of [1,2,3,4,5,6,7]" fxFlex="100" [fxFlex.gt-sm]="viewCol" fxFlex.sm="50" class="col">
         {{product['Images']}}
         <mat-card class="product-item text-center card-hover">
-          <img style="height:200px" src="/assets/images/mi{{product}}.jpg"
+          <img src="/assets/images/mi{{product}}.jpg"
             onError="this.src='/assets/images/default_image.png';">
         </mat-card>
       </div>
