--- a/store/src/default/pages/Authentication/Auth/auth.component.scss
+++ b/store/src/default/pages/Authentication/Auth/auth.component.scss
@@ -30,3 +30,16 @@
 ::ng-deep .mat-form-field-label >  .mat-form-field-required-marker {
   color: gray  !important;
 }
+
+h4 {
+  width: 100%; 
+  text-align: center; 
+  border-bottom: 1px solid #000; 
+  line-height: 0.1em;
+  margin: 10px 0 20px; 
+} 
+
+h4 span { 
+   background:#fff; 
+   padding:0 10px; 
+}
