--- a/store/src/default/pages/Authentication/sign-in/sign-in.component.html
+++ b/store/src/default/pages/Authentication/sign-in/sign-in.component.html
@@ -1,36 +1,72 @@
-<!--<div fxFlex="100"  class="p-2">-->
-<h2 class="text-muted text-center">Sign In</h2>
-<form [formGroup]="loginForm" novalidate>
-    <mat-form-field class="w-100 mt-2" [ngClass]="{'validationcolor':
-    (loginForm.controls.email.hasError('required') && submitted)}">
-        <input matInput placeholder="Email" formControlName="email">
-        <mat-error *ngIf="loginForm.controls['email'].hasError('required') && submitted">
-            Email is required
-        </mat-error>
-        <mat-error *ngIf="loginForm.controls['email'].hasError('invalidEmail') && submitted">
-            Invalid email address
-        </mat-error>
-    </mat-form-field>
-    <mat-form-field class="w-100 mt-1" [ngClass]="{'validationcolor':
-    (loginForm.controls.password.hasError('required') && submitted)}">
-        <input matInput placeholder="Password" formControlName="password" type="password">
-        <mat-error *ngIf="loginForm.controls['password'].hasError('required') && submitted">
-            Password is required
-        </mat-error>
-        <mat-error *ngIf="loginForm.controls['password'].hasError('minlength') && submitted">
-            Password isn't long enough, minimum of 5 characters
-        </mat-error>
-    </mat-form-field>
+<div fxFlex="100" class="p-2 boder-right">
+    <!-- <span style="padding: 2px; font-weight: 500;">or continue with</span> -->
+
+    <h4><span>or continue with</span></h4>
     <div class="text-center mt-2">
-        <button mat-fab color="primary" class="mat-elevation-z6" (click)="onLoginFormSubmit(loginForm.value)">
+        <mat-icon>facebook</mat-icon>
+        <mat-icon><img src="../../../../assets/images/google.png" alt=""></mat-icon>
+        <mat-icon>apple</mat-icon>
+    </div>
+
+    <h2 class="text-muted text-center">Sign In</h2>
+    <span>Become a Beaver Member and recieve exclusive offers customized for you</span>
+    <form [formGroup]="loginForm" novalidate>
+        <mat-form-field class="w-100 mt-2" [ngClass]="{'validationcolor':
+    (loginForm.controls.email.hasError('required') && submitted)}">
+            <input matInput placeholder="Email" formControlName="email">
+            <mat-error *ngIf="loginForm.controls['email'].hasError('required') && submitted">
+                Email is required
+            </mat-error>
+            <mat-error *ngIf="loginForm.controls['email'].hasError('invalidEmail') && submitted">
+                Invalid email address
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field class="w-100 mt-1" [ngClass]="{'validationcolor':
+    (loginForm.controls.password.hasError('required') && submitted)}">
+            <input matInput placeholder="Password" formControlName="password" type="password">
+            <mat-error *ngIf="loginForm.controls['password'].hasError('required') && submitted">
+                Password is required
+            </mat-error>
+            <mat-error *ngIf="loginForm.controls['password'].hasError('minlength') && submitted">
+                Password isn't long enough, minimum of 5 characters
+            </mat-error>
+        </mat-form-field>
+
+
+        <div class="text-center mt-2">
+            <mat-checkbox class="example-margin">Remember me!</mat-checkbox>
+        </div>
+
+        <div class="text-center mt-2">
+            By continueing. I agree to the terms of use & pivacy polices
+        </div>
+
+        <div class="text-center mt-2">
+            <!-- <button mat-fab color="primary" class="mat-elevation-z6" (click)="onLoginFormSubmit(loginForm.value)">
                 <i *ngIf="(authSandbox.loginLoading$ | async)" class="fa fa-spinner fa-spin" style="font-size:24px"></i>
 
-            <mat-icon *ngIf="!(authSandbox.loginLoading$ | async)">exit_to_app</mat-icon>
-        </button>
-    </div>
-    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-        <h5 class="text-muted auth forgot" routerLink="/auth/forgot">
-            Forgot Password?</h5>
-    </div>
+                <mat-icon *ngIf="!(authSandbox.loginLoading$ | async)">exit_to_app</mat-icon>
+            </button> -->
+            <button mat-button color="primary" class="mat-elevation-z6" (click)="onLoginFormSubmit(loginForm.value)">
+                <i *ngIf="(authSandbox.loginLoading$ | async)" class="fa fa-spinner fa-spin"
+                    style="font-size:24px"></i>Sign In</button>
+        </div>
 
-</form>
+        <div class="text-center mt-2">
+            <button mat-button color="primary" class="mat-elevation-z6">Create A New Accout</button>
+        </div>
+
+
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+            <h5 class="text-muted auth forgot">
+                Become a seller</h5>
+        </div>
+
+
+        <!-- <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+            <h5 class="text-muted auth forgot" routerLink="/auth/forgot">
+                Forgot Password?</h5>
+        </div> -->
+
+    </form>
+</div>
